# ai_fastapi_starter

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
deploy/k8s/: app.yaml  configmap.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  migrate-job.yaml  secret.example.yaml  worker.yaml
deploy/k8s/monitoring/: servicemonitor.yaml
docker/: Dockerfile.app  Dockerfile.migrate  Dockerfile.test  Dockerfile.worker  initdb.sh
docs/plans/: 2026-06-19-ai-fastapi-starter-plan.md
docs/specs/: 2026-06-19-ai-fastapi-starter-design.md
frontend/: .gitignore  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  routes.tsx
migrations/: env.py  script.py.mako
migrations/versions/: 2026_06_19_29905d6d52b0_initial_users_usage_log.py
scripts/: migrate.sh  pgqueuer_install.py  seed_admin.py
src/: config.py  context.py  main.py
src/api/: deps.py
src/common/: exceptions.py  logging_config.py  openai_client.py  retry.py
src/db/: session.py
src/models/: __init__.py  usage_log.py  user.py
src/schemas/: admin.py  auth.py
src/services/: auth.py  user.py  yandex_oauth.py
tests/: conftest.py  test_config.py  test_db.py
tests/api/: test_admin_users.py  test_app_boots.py  test_auth.py  test_config_endpoint.py  test_healthcheck.py  test_yandex.py
tests/common/: test_openai_tracking.py
tests/services/: test_yandex_oauth.py
tests/workers/: test_example_task.py
(+30 files in other folders)
