[project]
name = "ai_fastapi_starter"
version = "0.1.0"
description = "Backend starter (FastAPI + worker + DB + S3 + LLM) for AI projects"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "email-validator>=2.1",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgqueuer>=1.0",
    "aiobotocore>=2.13",
    "httpx>=0.27",
    "openai>=1.40",
    "bcrypt>=4.2",
    "PyJWT>=2.9",
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "types-PyYAML",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers -ra --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pgqueuer.*", "aiobotocore.*"]
ignore_missing_imports = true
